// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation/BreadCrumbs CustomSeparator smoke-test 1`] = `
<nav class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-mui-classname"
     data-cy="breadcrumbs"
     aria-label="breadcrumb"
>
  <ol class="MuiBreadcrumbs-ol css-mui-classname">
    <li class="MuiBreadcrumbs-li">
      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-mui-classname"
         data-cy="breadcrumbs-link-0"
         style="align-items: center; display: flex;"
      >
        <div data-cy="breadcrumbs-link-0"
             style="align-items: center; display: flex;"
        >
          <h3 class="MuiTypography-root MuiTypography-subtitle1 css-mui-classname"
              data-cy="breadcrumbs-link-0-label"
          >
            page1
          </h3>
        </div>
      </a>
    </li>
    <li aria-hidden="true"
        class="MuiBreadcrumbs-separator css-mui-classname"
    >
      &gt;
    </li>
    <li class="MuiBreadcrumbs-li">
      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-mui-classname"
         data-cy="breadcrumbs-link-1"
         style="align-items: center; display: flex;"
      >
        <div data-cy="breadcrumbs-link-1"
             style="align-items: center; display: flex;"
        >
          <h3 class="MuiTypography-root MuiTypography-subtitle1 css-mui-classname"
              data-cy="breadcrumbs-link-1-label"
          >
            page2
          </h3>
        </div>
      </a>
    </li>
    <li aria-hidden="true"
        class="MuiBreadcrumbs-separator css-mui-classname"
    >
      &gt;
    </li>
    <li class="MuiBreadcrumbs-li">
      <div data-cy="breadcrumbs-link-2"
           style="align-items: center; display: flex;"
      >
        <h3 class="MuiTypography-root MuiTypography-subtitle1 css-mui-classname"
            data-cy="breadcrumbs-link-2-label"
        >
          page3
        </h3>
      </div>
    </li>
  </ol>
</nav>
`;

exports[`Navigation/BreadCrumbs Localized smoke-test 1`] = `
<nav class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-mui-classname"
     data-cy="breadcrumbs"
     aria-label="breadcrumb"
>
  <ol class="MuiBreadcrumbs-ol css-mui-classname">
    <li class="MuiBreadcrumbs-li">
      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-mui-classname"
         data-cy="breadcrumbs-link-0"
         style="align-items: center; display: flex;"
      >
        <div data-cy="breadcrumbs-link-0"
             style="align-items: center; display: flex;"
        >
          <h3 class="MuiTypography-root MuiTypography-subtitle1 css-mui-classname"
              data-cy="breadcrumbs-link-0-label"
          >
            Pagina 1
          </h3>
        </div>
      </a>
    </li>
    <li aria-hidden="true"
        class="MuiBreadcrumbs-separator css-mui-classname"
    >
      /
    </li>
    <li class="MuiBreadcrumbs-li">
      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-mui-classname"
         data-cy="breadcrumbs-link-1"
         style="align-items: center; display: flex;"
      >
        <div data-cy="breadcrumbs-link-1"
             style="align-items: center; display: flex;"
        >
          <h3 class="MuiTypography-root MuiTypography-subtitle1 css-mui-classname"
              data-cy="breadcrumbs-link-1-label"
          >
            Pagina 2
          </h3>
        </div>
      </a>
    </li>
    <li aria-hidden="true"
        class="MuiBreadcrumbs-separator css-mui-classname"
    >
      /
    </li>
    <li class="MuiBreadcrumbs-li">
      <div data-cy="breadcrumbs-link-2"
           style="align-items: center; display: flex;"
      >
        <h3 class="MuiTypography-root MuiTypography-subtitle1 css-mui-classname"
            data-cy="breadcrumbs-link-2-label"
        >
          Pagina 3
        </h3>
      </div>
    </li>
  </ol>
</nav>
`;

exports[`Navigation/BreadCrumbs Primary play-test 1`] = `
<nav class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-mui-classname"
     data-cy="breadcrumbs"
     aria-label="breadcrumb"
>
  <ol class="MuiBreadcrumbs-ol css-mui-classname">
    <li class="MuiBreadcrumbs-li">
      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-mui-classname"
         data-cy="breadcrumbs-link-0"
         style="align-items: center; display: flex;"
      >
        <div data-cy="breadcrumbs-link-0"
             style="align-items: center; display: flex;"
        >
          <h3 class="MuiTypography-root MuiTypography-subtitle1 css-mui-classname"
              data-cy="breadcrumbs-link-0-label"
          >
            page1
          </h3>
        </div>
      </a>
    </li>
    <li aria-hidden="true"
        class="MuiBreadcrumbs-separator css-mui-classname"
    >
      /
    </li>
    <li class="MuiBreadcrumbs-li">
      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-mui-classname"
         data-cy="breadcrumbs-link-1"
         style="align-items: center; display: flex;"
      >
        <div data-cy="breadcrumbs-link-1"
             style="align-items: center; display: flex;"
        >
          <h3 class="MuiTypography-root MuiTypography-subtitle1 css-mui-classname"
              data-cy="breadcrumbs-link-1-label"
          >
            page2
          </h3>
        </div>
      </a>
    </li>
    <li aria-hidden="true"
        class="MuiBreadcrumbs-separator css-mui-classname"
    >
      /
    </li>
    <li class="MuiBreadcrumbs-li">
      <div data-cy="breadcrumbs-link-2"
           style="align-items: center; display: flex;"
      >
        <h3 class="MuiTypography-root MuiTypography-subtitle1 css-mui-classname"
            data-cy="breadcrumbs-link-2-label"
        >
          page3
        </h3>
      </div>
    </li>
  </ol>
</nav>
`;

exports[`Navigation/BreadCrumbs SizeLarge smoke-test 1`] = `
<nav class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-mui-classname"
     data-cy="breadcrumbs"
     aria-label="breadcrumb"
>
  <ol class="MuiBreadcrumbs-ol css-mui-classname">
    <li class="MuiBreadcrumbs-li">
      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-mui-classname"
         data-cy="breadcrumbs-link-0"
         style="align-items: center; display: flex;"
      >
        <div data-cy="breadcrumbs-link-0"
             style="align-items: center; display: flex;"
        >
          <h1 class="MuiTypography-root MuiTypography-h5 css-mui-classname"
              data-cy="breadcrumbs-link-0-label"
          >
            page1
          </h1>
        </div>
      </a>
    </li>
    <li aria-hidden="true"
        class="MuiBreadcrumbs-separator css-mui-classname"
    >
      /
    </li>
    <li class="MuiBreadcrumbs-li">
      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-mui-classname"
         data-cy="breadcrumbs-link-1"
         style="align-items: center; display: flex;"
      >
        <div data-cy="breadcrumbs-link-1"
             style="align-items: center; display: flex;"
        >
          <h1 class="MuiTypography-root MuiTypography-h5 css-mui-classname"
              data-cy="breadcrumbs-link-1-label"
          >
            page2
          </h1>
        </div>
      </a>
    </li>
    <li aria-hidden="true"
        class="MuiBreadcrumbs-separator css-mui-classname"
    >
      /
    </li>
    <li class="MuiBreadcrumbs-li">
      <div data-cy="breadcrumbs-link-2"
           style="align-items: center; display: flex;"
      >
        <h1 class="MuiTypography-root MuiTypography-h5 css-mui-classname"
            data-cy="breadcrumbs-link-2-label"
        >
          page3
        </h1>
      </div>
    </li>
  </ol>
</nav>
`;

exports[`Navigation/BreadCrumbs SizeMedium smoke-test 1`] = `
<nav class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-mui-classname"
     data-cy="breadcrumbs"
     aria-label="breadcrumb"
>
  <ol class="MuiBreadcrumbs-ol css-mui-classname">
    <li class="MuiBreadcrumbs-li">
      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-mui-classname"
         data-cy="breadcrumbs-link-0"
         style="align-items: center; display: flex;"
      >
        <div data-cy="breadcrumbs-link-0"
             style="align-items: center; display: flex;"
        >
          <h2 class="MuiTypography-root MuiTypography-h6 css-mui-classname"
              data-cy="breadcrumbs-link-0-label"
          >
            page1
          </h2>
        </div>
      </a>
    </li>
    <li aria-hidden="true"
        class="MuiBreadcrumbs-separator css-mui-classname"
    >
      /
    </li>
    <li class="MuiBreadcrumbs-li">
      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-mui-classname"
         data-cy="breadcrumbs-link-1"
         style="align-items: center; display: flex;"
      >
        <div data-cy="breadcrumbs-link-1"
             style="align-items: center; display: flex;"
        >
          <h2 class="MuiTypography-root MuiTypography-h6 css-mui-classname"
              data-cy="breadcrumbs-link-1-label"
          >
            page2
          </h2>
        </div>
      </a>
    </li>
    <li aria-hidden="true"
        class="MuiBreadcrumbs-separator css-mui-classname"
    >
      /
    </li>
    <li class="MuiBreadcrumbs-li">
      <div data-cy="breadcrumbs-link-2"
           style="align-items: center; display: flex;"
      >
        <h2 class="MuiTypography-root MuiTypography-h6 css-mui-classname"
            data-cy="breadcrumbs-link-2-label"
        >
          page3
        </h2>
      </div>
    </li>
  </ol>
</nav>
`;

exports[`Navigation/BreadCrumbs WithIcons smoke-test 1`] = `
<nav class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-mui-classname"
     data-cy="breadcrumbs"
     aria-label="breadcrumb"
>
  <ol class="MuiBreadcrumbs-ol css-mui-classname">
    <li class="MuiBreadcrumbs-li">
      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-mui-classname"
         data-cy="breadcrumbs-link-0"
         style="align-items: center; display: flex;"
      >
        <div data-cy="breadcrumbs-link-0"
             style="align-items: center; display: flex;"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ScheduleIcon"
               data-cy="breadcrumbs-link-0-icon"
               style="margin-right: 8px;"
          >
            <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
            </path>
            <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
            </path>
          </svg>
          <h3 class="MuiTypography-root MuiTypography-subtitle1 css-mui-classname"
              data-cy="breadcrumbs-link-0-label"
          >
            page1
          </h3>
        </div>
      </a>
    </li>
    <li aria-hidden="true"
        class="MuiBreadcrumbs-separator css-mui-classname"
    >
      /
    </li>
    <li class="MuiBreadcrumbs-li">
      <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-mui-classname"
         data-cy="breadcrumbs-link-1"
         style="align-items: center; display: flex;"
      >
        <div data-cy="breadcrumbs-link-1"
             style="align-items: center; display: flex;"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mui-classname"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="AccessibilityIcon"
               data-cy="breadcrumbs-link-1-icon"
               style="margin-right: 8px; height: 20px; width: 20px;"
          >
            <path d="M12 2c1.1 0 2 .9 2 2s-.9 2-2 2-2-.9-2-2 .9-2 2-2m9 7h-6v13h-2v-6h-2v6H9V9H3V7h18z">
            </path>
          </svg>
          <h3 class="MuiTypography-root MuiTypography-subtitle1 css-mui-classname"
              data-cy="breadcrumbs-link-1-label"
          >
            page2
          </h3>
        </div>
      </a>
    </li>
    <li aria-hidden="true"
        class="MuiBreadcrumbs-separator css-mui-classname"
    >
      /
    </li>
    <li class="MuiBreadcrumbs-li">
      <div data-cy="breadcrumbs-link-2"
           style="align-items: center; display: flex;"
      >
        <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mui-classname"
             focusable="false"
             aria-hidden="true"
             viewbox="0 0 24 24"
             data-testid="ScheduleIcon"
             data-cy="breadcrumbs-link-2-icon"
             style="margin-right: 8px;"
        >
          <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2M12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8">
          </path>
          <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z">
          </path>
        </svg>
        <h3 class="MuiTypography-root MuiTypography-subtitle1 css-mui-classname"
            data-cy="breadcrumbs-link-2-label"
        >
          page3
        </h3>
      </div>
    </li>
  </ol>
</nav>
`;
